Fix style to prevent amounts overflow their container

--- a/src/App.scss
+++ b/src/App.scss
@@ -195,15 +195,15 @@ nav {
   form {
     margin-bottom: 20px;
     input {
-      font-size: 1.25rem;
+      font-size: 1rem;
       // border: 0;
       width: 100px;
     }
   }
   button {
     position: absolute;
-    top: 30%;
-    right: 2.5rem;
+    top: 35%;
+    right: 10%;
   }
 }
 .paycheck-add-btn {
